--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ body {
 
 #nav-bar ul li a {
   color: #333;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 #header-img {
@@ -88,6 +90,84 @@ main{
   text-align: center;
 }
 
+
+/* Pricing styles */
+#pricing{
+  width: 100%;
+  margin-top: 50px;
+}
+
+#pricing-items{
+  display: flex;
+}
+
+.card{
+  border: 1px solid #333;
+  margin: 20px 10px;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.card h2{
+  text-align: center;
+  font-size: 30px;
+  margin-top: 20px;
+}
+
+.title{
+  width: 100%;
+  text-align: center;
+  background-color: #eee;
+  padding: 10px 70px;
+}
+
+.title h3{
+  text-transform: uppercase;
+}
+
+.card ul{
+  text-align: center;
+  margin-top: 15px;
+}
+
+.card ul li{
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.card .select{
+  background-color: orange;
+  padding: 10px 30px;
+  border: none;
+  text-align: center;
+  margin-top: 20px;
+}
+
+
+/* Footer styles */
+footer{
+  margin-top: 20px;
+  background-color: #eee;
+  display: flex;
+  justify-content: end;
+  padding: 10px 20px 
+}
+
+footer ul{
+  display: flex;
+}
+
+footer ul li{
+  margin-right: 20px;
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+footer ul li a{
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+}
 
 @media screen and (max-width: 768px) {
   body {
